<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.scheduler.dialog.NewScheduleDialogFragment"
        android:id="@+id/fragment_new_schedule_dialog">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">
        <TextView
                android:text="@string/schedule_dialog_title"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:id="@+id/schedule_title_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="18sp"
                android:gravity="center_vertical"/>
        <EditText
                android:id="@+id/schedule_title"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/schedule_title"
                android:autofillHints=""/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:id="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/scheduler_dialog_comment"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:id="@+id/duration_minutes_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="18sp"
                android:gravity="center_vertical"/>
        <EditText
                android:id="@+id/schedule_comment"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/scheduler_dialog_comment" android:autofillHints=""/>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>