<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

    <ImageView
            app:srcCompat="@android:drawable/ic_menu_recent_history"
            android:id="@+id/detail_list_row_icon"
            android:scaleType="fitXY"
            android:cropToPadding="false" android:adjustViewBounds="true" android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/icon"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_list_row_icon" android:layout_marginStart="8dp"
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:singleLine="true" android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"/>
        <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:singleLine="true" android:textSize="18sp"/>

    </LinearLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp" android:id="@+id/action_button"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <ImageView
                android:layout_height="26dp" app:srcCompat="@raw/vertical_three_dots"
                android:id="@+id/action_button_icon"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_width="26dp"
                android:background="@android:color/transparent" android:layout_marginEnd="8dp"
                android:contentDescription="@string/action_description" android:scaleType="fitXY"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>
    <TextView
            android:text="@string/playing_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/playing_text"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp" android:textColor="@color/colorPrimary" android:textStyle="bold"
            android:visibility="gone" android:textAlignment="textEnd"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline" app:layout_constraintGuide_percent="0.83"/>
</android.support.constraint.ConstraintLayout>
